Bug 37646 - Crash when Inserting form control into Chart
Summary: Crash when Inserting form control into Chart
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: Other All
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4.1
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-26 13:59 UTC by Regina Henschel
Modified: 2017-04-19 16:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Try inserting the green rectangle, that work. Try same with text box. Crash. (16.40 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-05-26 13:59 UTC, Regina Henschel
Details
this change will at least prevent the crash (1.70 KB, patch)
2011-06-09 14:44 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2011-05-26 13:59:59 UTC
Created attachment 47199 [details]
Try inserting the green rectangle, that work. Try same with text box. Crash.

It is possible to insert a drawing object into a chart. For example draw a rectangle, copy it to clip board, set chart to editing mode and paste the rectangle.
Because titles cannot be linked to a cell, but form control "text box" has this feature, I try to insert the form control into the chart. This results in an immediately crash.
You may argue, that it is not intended to insert form controls into charts, but then LO shall not crash, but simple refuse to do so.
Comment 1 Rainer Bielefeld Retired 2011-05-26 22:43:19 UTC
[Reproducible] with "LibreOffice 3.4.0RC1  – WIN7  Home Premium  (64bit) German UI [OOO340m1 (Build:11)]". Steps to reproduce:
1. Menu 'View > Toolbars > Form Controls' to make toolbar visible
2. Design Mode on
3. click the yellow "Insert me" field, it's a form control
4. <ctrl+c> for copy
5. Double click chart
   Brey border around chart indicates chart edit mode
6. <ctrl+v> for paste
   Expected: Form control will be inserted
   Actual: crash

No crash if you copy / paste the blue "Insert me" rectangle drawing

Paste is not possible in OOo 3.1.1

Paste is possible in OOo 3.4-dev (obsolete version), and it also will crash.

@Kohei:
I saw you assigned in an least 1 similar "Chart crash" bug report
Please feel free to reassign if it's not your area!
Comment 2 Rainer Bielefeld Retired 2011-05-26 23:19:03 UTC
I forgot to mention: The crash also happens when I try to copy / paste form field to chart in a WRITER document
Comment 3 Kohei Yoshida 2011-06-09 14:37:16 UTC
Hi Regina,

So, I assume this (ability to copy-n-paste a form control into a chart object) is a valid feature?  I can change a few things to prevent a crash, but the form control won't get saved to the file.

If we need to support this, I need to find a way to save this to the file, and that will take a little more investigation.
Comment 4 Kohei Yoshida 2011-06-09 14:44:26 UTC
Created attachment 47792 [details]
this change will at least prevent the crash

This change will at least prevent the crash, but it will still not save the form controls to the disk.  Better than how it is now, but we may need to go a step further....
Comment 5 Regina Henschel 2011-06-09 15:00:44 UTC
No, I do not think, that it is a valid feature now. I came across it by my attempt to get a text inside the chart, which is linked to the spreadsheet. Preventing the crash is enough for now. The real problem is linking Title and Subtitle to spreadsheet cells. And that would be a new feature.
Comment 6 Kohei Yoshida 2011-06-09 18:53:43 UTC
Fixed on master (for 3.5)

http://cgit.freedesktop.org/libreoffice/libs-core/commit/?id=6d2ddc29ef3fc8535edfda879404a2f8016e054e

and request for review sent to the list for 3.4.1.
Comment 7 Rainer Bielefeld Retired 2011-06-10 02:58:35 UTC
RC2 is bit by bit identical with release version, so separate items in the version picker are useless. Changes have been discussed with Michael Meeks.
Comment 8 Björn Michaelsen 2011-12-22 05:53:45 UTC Comment hidden (noise)
Comment 9 Regina Henschel 2017-04-19 16:49:10 UTC
no crash in LO 5.4