fdo#37646: Avoid crash when pasting a form control into chart.

Signed-off-by: Markus Mohrhard <markus.mohrhard@googlemail.com>